fix: remove multiple paragraphs for linebreaks it looked bad on smaller devies

--- a/src/app/features/home/home-container/feature-preview/feature-preview.component.scss
+++ b/src/app/features/home/home-container/feature-preview/feature-preview.component.scss
@@ -8,6 +8,10 @@ section {
   justify-content: center;
   gap: 7rem;
 
+  &::slotted {
+    color: red;
+  }
+
   .feature-description {
     display: flex;
     flex-direction: column;
